src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>IsDuplicateMember__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDuplicateMember</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TestFormula__c</fullName>
        <formula>IF (

AND(YEAR(Opportunity__r.CloseDate)=YEAR(TODAY()), Opportunity__r.RecordTypeId  = &quot;012A0000000tFp9&quot; , Opportunity__r.Amount &gt; 0),
Opportunity__r.Amount, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TestFormula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ticket_Type__c</fullName>
        <label>Ticket Type</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>CampaignMemberType</fullName>
        <active>true</active>
        <label>CampaignMemberType</label>
    </recordTypes>
</CustomObject>